--- a/css/wumpus.css
+++ b/css/wumpus.css
@@ -1,7 +1,16 @@
 .wcell{
-  width:40px;
+  width:60px;
   height:40px;
+  padding-top: 20px;
   display: inline-block;
   border: 1px solid #01579B;
   background-color: #80D8FF;
+  vertical-align: middle;
+  margin: auto;
+  text-align: center;
+}
+
+i{
+  vertical-align: middle;
+  height:30px;
 }
