Shifted to nodeJS, added minmax rendering and initial logic

--- a/src/Uno.css
+++ b/src/Uno.css
@@ -1,6 +1,6 @@
-.card{
+.unoCard{
   width:60px;
-  height:40px;
+  height:65px;
   padding-top: 20px;
   display: inline-block;
   border: 1px solid #01579B;
